--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.5.1",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
