--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@mantine/core": "^8.0.0",
     "@mantine/hooks": "^8.0.0",
     "@mantine/next": "^6.0.22",
+    "@mantine/notifications": "^8.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.75.7",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "axios": "^1.9.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
@@ -30,6 +33,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.5.1",
+    "typescript-json-schema": "^0.65.1",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.24.4"
   },
