feat: add Regex Generator feature with visual builder and pattern library
- Introduced a new Regex Generator page with layout and metadata.
- Implemented RegexBuilder component for constructing regex patterns visually.
- Added RegexTester component to test regex patterns against input strings.
- Created RegexPatternLibrary component to provide common regex patterns.
- Enhanced regex functionality with utility functions for validation and matching.
- Updated Header and Footer components to include links to the new Regex Generator.
- Added new types for regex patterns and matches in the types index.
- Updated package.json and package-lock.json to include necessary dependencies.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "regex-colorizer": "^1.0.2",
+    "regexp-tree": "^0.1.27",
     "resend": "^4.5.1",
     "typescript-json-schema": "^0.65.1",
     "usehooks-ts": "^3.1.1",
